# oldifp

./: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TIPS  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  ifp  ifp.1  ifp.c  ifp_routines.c  ifp_routines.h  nonroot.sh  unicodehack.c  unicodehack.h
.deps/: ifp-ifp.Po  ifp-ifp_routines.Po  libunicodehack_a-unicodehack.Po
m4/: libusb.m4
